--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,16 @@
   "author": "[TBB] Alfred Burgess",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "express": "^4.18.2",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/uuid": "^9.0.3",
+    "cors": "^2.8.5",
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^9.0.0"
   }
 }
